`notbooks/` work for median for `PolyclonalCollection`

--- a/notebooks/real_REGN10933_mAb.ipynb
+++ b/notebooks/real_REGN10933_mAb.ipynb
@@ -18,11 +18,11 @@
    "id": "13d43c34-b428-4675-9238-8f7da4828bc6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-16T23:35:12.834836Z",
-     "iopub.status.busy": "2022-07-16T23:35:12.834272Z",
-     "iopub.status.idle": "2022-07-16T23:35:14.310612Z",
-     "shell.execute_reply": "2022-07-16T23:35:14.310054Z",
-     "shell.execute_reply.started": "2022-07-16T23:35:12.834768Z"
+     "iopub.execute_input": "2022-07-19T16:31:29.059707Z",
+     "iopub.status.busy": "2022-07-19T16:31:29.059081Z",
+     "iopub.status.idle": "2022-07-19T16:31:35.087514Z",
+     "shell.execute_reply": "2022-07-19T16:31:35.086452Z",
+     "shell.execute_reply.started": "2022-07-19T16:31:29.059620Z"
     },
     "tags": []
    },
@@ -53,11 +53,11 @@
    "id": "72773c10-b8d3-4e10-8a2f-fe833053c434",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-16T23:35:14.313338Z",
-     "iopub.status.busy": "2022-07-16T23:35:14.313132Z",
-     "iopub.status.idle": "2022-07-16T23:35:14.445454Z",
-     "shell.execute_reply": "2022-07-16T23:35:14.444960Z",
-     "shell.execute_reply.started": "2022-07-16T23:35:14.313317Z"
+     "iopub.execute_input": "2022-07-19T16:31:35.089475Z",
+     "iopub.status.busy": "2022-07-19T16:31:35.089114Z",
+     "iopub.status.idle": "2022-07-19T16:31:35.250581Z",
+     "shell.execute_reply": "2022-07-19T16:31:35.249636Z",
+     "shell.execute_reply.started": "2022-07-19T16:31:35.089443Z"
     },
     "tags": []
    },
@@ -302,11 +302,11 @@
    "id": "a2646782-6942-4a50-bff3-35dc00a02423",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-16T23:35:14.449348Z",
-     "iopub.status.busy": "2022-07-16T23:35:14.449097Z",
-     "iopub.status.idle": "2022-07-16T23:35:14.481921Z",
-     "shell.execute_reply": "2022-07-16T23:35:14.481290Z",
-     "shell.execute_reply.started": "2022-07-16T23:35:14.449327Z"
+     "iopub.execute_input": "2022-07-19T16:31:35.252424Z",
+     "iopub.status.busy": "2022-07-19T16:31:35.252129Z",
+     "iopub.status.idle": "2022-07-19T16:31:35.290976Z",
+     "shell.execute_reply": "2022-07-19T16:31:35.289764Z",
+     "shell.execute_reply.started": "2022-07-19T16:31:35.252399Z"
     },
     "tags": []
    },
@@ -431,11 +431,11 @@
    "id": "e02cce19-1f5d-4175-8680-de6f163309fc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-16T23:35:14.484573Z",
-     "iopub.status.busy": "2022-07-16T23:35:14.484383Z",
-     "iopub.status.idle": "2022-07-16T23:35:14.581234Z",
-     "shell.execute_reply": "2022-07-16T23:35:14.580684Z",
-     "shell.execute_reply.started": "2022-07-16T23:35:14.484554Z"
+     "iopub.execute_input": "2022-07-19T16:31:35.293831Z",
+     "iopub.status.busy": "2022-07-19T16:31:35.293449Z",
+     "iopub.status.idle": "2022-07-19T16:31:35.411856Z",
+     "shell.execute_reply": "2022-07-19T16:31:35.411339Z",
+     "shell.execute_reply.started": "2022-07-19T16:31:35.293803Z"
     },
     "tags": []
    },
@@ -444,13 +444,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-94d00c776c0842b7967047aebe1db4fb\"></div>\n",
+       "<div id=\"altair-viz-badaa878e12147b19dd42276f804e632\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-94d00c776c0842b7967047aebe1db4fb\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-94d00c776c0842b7967047aebe1db4fb\");\n",
+       "    if (outputDiv.id !== \"altair-viz-badaa878e12147b19dd42276f804e632\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-badaa878e12147b19dd42276f804e632\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -584,11 +584,11 @@
    "id": "99ca8235-2bd0-4f13-8145-9641ce101a78",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-16T23:35:14.584323Z",
-     "iopub.status.busy": "2022-07-16T23:35:14.584132Z",
-     "iopub.status.idle": "2022-07-16T23:35:29.637620Z",
-     "shell.execute_reply": "2022-07-16T23:35:29.636834Z",
-     "shell.execute_reply.started": "2022-07-16T23:35:14.584304Z"
+     "iopub.execute_input": "2022-07-19T16:31:35.413625Z",
+     "iopub.status.busy": "2022-07-19T16:31:35.413197Z",
+     "iopub.status.idle": "2022-07-19T16:31:50.283946Z",
+     "shell.execute_reply": "2022-07-19T16:31:50.283245Z",
+     "shell.execute_reply.started": "2022-07-19T16:31:35.413458Z"
     },
     "tags": []
    },
@@ -598,18 +598,18 @@
      "output_type": "stream",
      "text": [
       "# First fitting site-level model.\n",
-      "# Starting optimization of 1154 parameters at Sat Jul 16 16:35:15 2022.\n",
+      "# Starting optimization of 1154 parameters at Tue Jul 19 09:31:36 2022.\n",
       "         step     time_sec         loss     fit_loss   reg_escape   reg_spread reg_activity\n",
-      "            0     0.033193         9129       9128.1            0            0      0.90499\n",
-      "          100       3.7799       956.74        935.9       18.031            0       2.8072\n",
-      "          195       7.3181       954.96       931.86       20.287            0       2.8091\n",
-      "# Successfully finished at Sat Jul 16 16:35:23 2022.\n",
-      "# Starting optimization of 5875 parameters at Sat Jul 16 16:35:23 2022.\n",
+      "            0     0.032232         9129       9128.1            0            0      0.90499\n",
+      "          100       3.6605       956.74        935.9       18.031            0       2.8072\n",
+      "          195        7.104       954.96       931.86       20.287            0       2.8091\n",
+      "# Successfully finished at Tue Jul 19 09:31:44 2022.\n",
+      "# Starting optimization of 5875 parameters at Tue Jul 19 09:31:44 2022.\n",
       "         step     time_sec         loss     fit_loss   reg_escape   reg_spread reg_activity\n",
-      "            0     0.040419       1511.2       1428.5       79.821   7.8177e-32       2.8091\n",
-      "          100       4.1122       1279.4       1146.7       110.87       18.928       2.8565\n",
-      "          155       6.3105       1279.2         1146       111.01       19.292       2.8567\n",
-      "# Successfully finished at Sat Jul 16 16:35:29 2022.\n"
+      "            0     0.033442       1511.2       1428.5       79.821   7.8177e-32       2.8091\n",
+      "          100       3.9554       1279.4       1146.7       110.87       18.928       2.8565\n",
+      "          155        6.099       1279.2         1146       111.01       19.292       2.8567\n",
+      "# Successfully finished at Tue Jul 19 09:31:50 2022.\n"
      ]
     }
    ],
@@ -643,11 +643,11 @@
    "id": "d49d93b0-b9aa-4653-85c0-fd14c58dc790",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-16T23:35:29.642532Z",
-     "iopub.status.busy": "2022-07-16T23:35:29.642217Z",
-     "iopub.status.idle": "2022-07-16T23:36:54.116978Z",
-     "shell.execute_reply": "2022-07-16T23:36:54.116316Z",
-     "shell.execute_reply.started": "2022-07-16T23:35:29.642502Z"
+     "iopub.execute_input": "2022-07-19T16:31:50.285872Z",
+     "iopub.status.busy": "2022-07-19T16:31:50.285442Z",
+     "iopub.status.idle": "2022-07-19T16:33:28.578370Z",
+     "shell.execute_reply": "2022-07-19T16:33:28.577860Z",
+     "shell.execute_reply.started": "2022-07-19T16:31:50.285847Z"
     },
     "tags": []
    },
@@ -656,8 +656,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting fitting at Sat Jul 16 16:35:39 2022\n",
-      "Finished fitting at Sat Jul 16 16:36:54 2022\n"
+      "Starting fitting at Tue Jul 19 09:32:00 2022\n",
+      "Finished fitting at Tue Jul 19 09:33:28 2022\n"
      ]
     }
    ],
@@ -700,11 +700,11 @@
    "id": "b9a29d94-7e01-4b66-a1f8-8d8a993e54b6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-16T23:36:54.120058Z",
-     "iopub.status.busy": "2022-07-16T23:36:54.119882Z",
-     "iopub.status.idle": "2022-07-16T23:36:54.146044Z",
-     "shell.execute_reply": "2022-07-16T23:36:54.145405Z",
-     "shell.execute_reply.started": "2022-07-16T23:36:54.120040Z"
+     "iopub.execute_input": "2022-07-19T16:33:28.579419Z",
+     "iopub.status.busy": "2022-07-19T16:33:28.579191Z",
+     "iopub.status.idle": "2022-07-19T16:33:28.605476Z",
+     "shell.execute_reply": "2022-07-19T16:33:28.604926Z",
+     "shell.execute_reply.started": "2022-07-19T16:33:28.579401Z"
     },
     "tags": []
    },
@@ -732,6 +732,7 @@
        "      <th></th>\n",
        "      <th>epitope</th>\n",
        "      <th>activity_mean</th>\n",
+       "      <th>activity_median</th>\n",
        "      <th>activity_std</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -740,6 +741,7 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>2.95</td>\n",
+       "      <td>2.95</td>\n",
        "      <td>0.01</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -747,8 +749,8 @@
        "</div>"
       ],
       "text/plain": [
-       "  epitope  activity_mean  activity_std\n",
-       "0       1           2.95          0.01"
+       "  epitope  activity_mean  activity_median  activity_std\n",
+       "0       1           2.95             2.95          0.01"
       ]
      },
      "execution_count": 7,
@@ -779,11 +781,11 @@
    "id": "eeb0216a-4992-42af-ab5d-71fed09bf0d6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-16T23:36:54.148658Z",
-     "iopub.status.busy": "2022-07-16T23:36:54.148538Z",
-     "iopub.status.idle": "2022-07-16T23:36:54.151363Z",
-     "shell.execute_reply": "2022-07-16T23:36:54.150912Z",
-     "shell.execute_reply.started": "2022-07-16T23:36:54.148642Z"
+     "iopub.execute_input": "2022-07-19T16:33:28.606619Z",
+     "iopub.status.busy": "2022-07-19T16:33:28.606380Z",
+     "iopub.status.idle": "2022-07-19T16:33:28.609138Z",
+     "shell.execute_reply": "2022-07-19T16:33:28.608636Z",
+     "shell.execute_reply.started": "2022-07-19T16:33:28.606600Z"
     },
     "tags": []
    },
@@ -806,26 +808,38 @@
    "id": "4801d56e-cd91-4c7a-8bec-3bce8e69673a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-16T23:36:54.153810Z",
-     "iopub.status.busy": "2022-07-16T23:36:54.153697Z",
-     "iopub.status.idle": "2022-07-16T23:36:55.148181Z",
-     "shell.execute_reply": "2022-07-16T23:36:55.147677Z",
-     "shell.execute_reply.started": "2022-07-16T23:36:54.153796Z"
+     "iopub.execute_input": "2022-07-19T16:33:28.610247Z",
+     "iopub.status.busy": "2022-07-19T16:33:28.610032Z",
+     "iopub.status.idle": "2022-07-19T16:33:31.778113Z",
+     "shell.execute_reply": "2022-07-19T16:33:31.777280Z",
+     "shell.execute_reply.started": "2022-07-19T16:33:28.610225Z"
     },
     "tags": []
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jbloom/polyclonal/polyclonal/plot.py:716: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_percent_max[e] = df_percent_max[e].clip(lower=0)\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-05bf96f23477414b95e86613e2ae01fb\"></div>\n",
+       "<div id=\"altair-viz-a1b608e24dfd44309c5701d0e01a38d0\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-05bf96f23477414b95e86613e2ae01fb\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-05bf96f23477414b95e86613e2ae01fb\");\n",
+       "    if (outputDiv.id !== \"altair-viz-a1b608e24dfd44309c5701d0e01a38d0\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-a1b608e24dfd44309c5701d0e01a38d0\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -912,11 +926,11 @@
    "id": "501dc76d-41d0-441f-96d8-f890ab708353",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-16T23:36:55.149413Z",
-     "iopub.status.busy": "2022-07-16T23:36:55.149134Z",
-     "iopub.status.idle": "2022-07-16T23:36:55.612013Z",
-     "shell.execute_reply": "2022-07-16T23:36:55.611508Z",
-     "shell.execute_reply.started": "2022-07-16T23:36:55.149388Z"
+     "iopub.execute_input": "2022-07-19T16:33:31.781166Z",
+     "iopub.status.busy": "2022-07-19T16:33:31.780741Z",
+     "iopub.status.idle": "2022-07-19T16:33:32.724622Z",
+     "shell.execute_reply": "2022-07-19T16:33:32.723903Z",
+     "shell.execute_reply.started": "2022-07-19T16:33:31.781124Z"
     },
     "tags": []
    },
@@ -1026,11 +1040,11 @@
    "id": "a2fe12cf-978d-4ab9-8ab6-394b736a35b7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-16T23:36:55.613001Z",
-     "iopub.status.busy": "2022-07-16T23:36:55.612770Z",
-     "iopub.status.idle": "2022-07-16T23:36:56.735426Z",
-     "shell.execute_reply": "2022-07-16T23:36:56.734952Z",
-     "shell.execute_reply.started": "2022-07-16T23:36:55.612983Z"
+     "iopub.execute_input": "2022-07-19T16:33:32.726088Z",
+     "iopub.status.busy": "2022-07-19T16:33:32.725742Z",
+     "iopub.status.idle": "2022-07-19T16:33:33.918319Z",
+     "shell.execute_reply": "2022-07-19T16:33:33.917839Z",
+     "shell.execute_reply.started": "2022-07-19T16:33:32.726049Z"
     },
     "tags": []
    },
@@ -1039,13 +1053,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-e5cc51a3427e42468f7ac9dfe323b685\"></div>\n",
+       "<div id=\"altair-viz-c4f6f1d87e5849f5a87248c310d7a8d7\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-e5cc51a3427e42468f7ac9dfe323b685\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-e5cc51a3427e42468f7ac9dfe323b685\");\n",
+       "    if (outputDiv.id !== \"altair-viz-c4f6f1d87e5849f5a87248c310d7a8d7\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-c4f6f1d87e5849f5a87248c310d7a8d7\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
