Added `min_replicates` to `PolyclonalCollection.mut_escape_lineplot`

--- a/notebooks/RBD_average.ipynb
+++ b/notebooks/RBD_average.ipynb
@@ -533,7 +533,8 @@
    "id": "9a66c1d0-3595-45c7-9e06-1fe926bf04cd",
    "metadata": {},
    "source": [
-    "And the actual mutation escape values:"
+    "And the actual mutation escape values.\n",
+    "See how you can select mutations based not only on how many times they are seen (averaged over all models in average), but also the number of replicates in which they are seen."
    ]
   },
   {
