fixing two silly typos

--- a/notebooks/RBD_average.ipynb
+++ b/notebooks/RBD_average.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Averaging models\n",
-    "Probably the best way to ensure robust inferences and estimate error isn't to use bootstrapping of a single model, but rather to actuall have multiple experimental replicates, ideally on different libraries.\n",
+    "Probably the best way to ensure robust inferences and estimate error isn't to use bootstrapping of a single model, but rather to actually have multiple experimental replicates, ideally on different libraries.\n",
     "\n",
     "Here we describe how to average model fits across libraries and/or replicates."
    ]
