--- a/notebooks/lineplot_and_heatmap.ipynb
+++ b/notebooks/lineplot_and_heatmap.ipynb
@@ -13,11 +13,13 @@
     "\n",
     "with open(\"_model_bootstrap.pickle\", \"rb\") as f:\n",
     "    model = pickle.load(f)\n",
-    "    \n",
+    "\n",
     "init_df = pd.concat(\n",
     "    [\n",
     "        model.mut_escape_df,\n",
-    "        model.mut_escape_df[[\"epitope\", \"site\", \"wildtype\"]].drop_duplicates().assign(\n",
+    "        model.mut_escape_df[[\"epitope\", \"site\", \"wildtype\"]]\n",
+    "        .drop_duplicates()\n",
+    "        .assign(\n",
     "            mutant=lambda x: x[\"wildtype\"],\n",
     "            escape_mean=0,\n",
     "            escape_median=0,\n",
@@ -77,7 +79,7 @@
     "    site_zoom_bar_color_scheme=\"set3\",\n",
     "):\n",
     "    \"\"\"Lineplots and heatmaps of per-site and per-mutation values.\n",
-    "    \n",
+    "\n",
     "    Parameters\n",
     "    ----------\n",
     "    data_df : pandas.DataFrame\n",
@@ -152,10 +154,10 @@
     "    if any(c.startswith(\"_stat\") for c in req_cols):  # used for calculated stats\n",
     "        raise ValueError(f\"No columns can start with '_stat' in {data_df.columns=}\")\n",
     "    data_df = data_df[req_cols].reset_index(drop=True)\n",
-    "             \n",
+    "\n",
     "    categories = data_df[category_col].unique().tolist()\n",
     "    show_category_label = show_single_category_label or (len(categories) > 1)\n",
-    "    \n",
+    "\n",
     "    # set color schemes if use defaults\n",
     "    if not category_colors:\n",
     "        if len(categories) > len(DEFAULT_POSITIVE_COLORS):\n",
@@ -163,40 +165,45 @@
     "        category_colors = dict(zip(categories, DEFAULT_POSITIVE_COLORS))\n",
     "    if not heatmap_negative_color:\n",
     "        heatmap_negative_color = DEFAULT_NEGATIVE_COLOR\n",
-    "    \n",
-    "    no_na_cols = basic_req_cols + ([site_zoom_bar_color_col] if site_zoom_bar_color_col else [])\n",
+    "\n",
+    "    no_na_cols = basic_req_cols + (\n",
+    "        [site_zoom_bar_color_col] if site_zoom_bar_color_col else []\n",
+    "    )\n",
     "    if data_df[no_na_cols].isnull().any().any():\n",
-    "        raise ValueError(f\"`data_df` has NA values in key cols:\\n{data_df[no_na_cols].isnull().any()}\")\n",
-    "    \n",
+    "        raise ValueError(\n",
+    "            f\"`data_df` has NA values in key cols:\\n{data_df[no_na_cols].isnull().any()}\"\n",
+    "        )\n",
+    "\n",
     "    if alphabet is None:\n",
     "        alphabet = natsort.natsorted(data_df[\"mutant\"].unique())\n",
     "    else:\n",
     "        data_df = data_df.query(\"mutant in @alphabet\")\n",
-    "        \n",
+    "\n",
     "    if sites is None:\n",
     "        sites = natsort.natsorted(data_df[\"site\"].unique(), alg=natsort.ns.SIGNED)\n",
     "    else:\n",
     "        data_df = data_df.query(\"site in @sites\")\n",
     "        if not set(sites).issubset(data_df[\"site\"]):\n",
     "            raise ValueError(\"`sites` has sites not in `data_df`\")\n",
-    "        \n",
+    "\n",
     "    # Cannot sort by sites completely: # https://github.com/altair-viz/altair/issues/2663\n",
     "    # But can sort up to ~1000 elements, which is enough that regular sorting will do the\n",
     "    # rest (assuming <10,000 sites). So make `sort_sites` list that sorts the first 1000\n",
     "    # elements and then check that is enough.\n",
     "    n_sort_sites = 1002  # this many does not raise error\n",
-    "    sort_sites = sites[: n_sort_sites]\n",
+    "    sort_sites = sites[:n_sort_sites]\n",
     "    if list(sites) != [*sort_sites, *sorted(sites[n_sort_sites:])]:\n",
     "        raise ValueError(f\"Cannot sort {len(sites)=} sites\")\n",
-    "        \n",
+    "\n",
     "    # get tooltips for heatmap\n",
     "    heatmap_tooltips = [\n",
     "        alt.Tooltip(c, type=\"quantitative\", format=\".3g\")\n",
-    "        if data_df[c].dtype == float else alt.Tooltip(c, type=\"nominal\")\n",
+    "        if data_df[c].dtype == float\n",
+    "        else alt.Tooltip(c, type=\"nominal\")\n",
     "        for c in req_cols\n",
     "        if c != category_col or show_category_label\n",
     "    ]\n",
-    "            \n",
+    "\n",
     "    # make floor at zero selection, setting floor to either 0 or min in data (no floor)\n",
     "    min_stat = data_df[stat_col].min()  # used as min in heatmap when not flooring at 0\n",
     "    if heatmap_min_at_least is not None:\n",
@@ -214,14 +221,16 @@
     "        fields=[\"floor\"],\n",
     "        value=[{\"floor\": 0 if init_floor_at_zero else min_stat}],\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    # create sliders for max stat at site and any additional sliders\n",
     "    sliders = {\n",
     "        \"_stat_site_max\": alt.selection_point(\n",
     "            fields=[\"cutoff\"],\n",
     "            value=[{\"cutoff\": min_stat}],\n",
     "            bind=alt.binding_range(\n",
-    "                name=f\"minimum max of {stat_col} at site\", min=min_stat, max=max_stat,\n",
+    "                name=f\"minimum max of {stat_col} at site\",\n",
+    "                min=min_stat,\n",
+    "                max=max_stat,\n",
     "            ),\n",
     "        )\n",
     "    }\n",
@@ -235,16 +244,18 @@
     "                name=f\"minimum {slider_stat}\",\n",
     "            ),\n",
     "        )\n",
-    "            \n",
+    "\n",
     "    # whether to show line on line plot\n",
     "    line_selection = alt.selection_point(\n",
     "        bind=alt.binding_radio(\n",
-    "            options=[True, False], labels=[\"yes\", \"no\"], name=\"show line on site plot\",\n",
+    "            options=[True, False],\n",
+    "            labels=[\"yes\", \"no\"],\n",
+    "            name=\"show line on site plot\",\n",
     "        ),\n",
     "        fields=[\"_stat_show_line\"],\n",
     "        value=[{\"_stat_show_line\": True}],\n",
     "    )\n",
-    "            \n",
+    "\n",
     "    # create site zoom bar\n",
     "    site_brush = alt.selection_interval(\n",
     "        encodings=[\"x\"],\n",
@@ -268,10 +279,8 @@
     "                    scale=alt.Scale(scheme=site_zoom_bar_color_scheme),\n",
     "                    legend=alt.Legend(orient=\"left\"),\n",
     "                    sort=(\n",
-    "                        site_zoom_bar_df\n",
-    "                        .set_index(\"site\")\n",
-    "                        .loc[sort_sites]\n",
-    "                        [site_zoom_bar_color_col]\n",
+    "                        site_zoom_bar_df.set_index(\"site\")\n",
+    "                        .loc[sort_sites][site_zoom_bar_color_col]\n",
     "                        .unique()\n",
     "                    ),\n",
     "                )\n",
@@ -279,7 +288,8 @@
     "                else alt.value(\"gray\")\n",
     "            ),\n",
     "            tooltip=[\n",
-    "                c for c in site_zoom_bar_df.columns\n",
+    "                c\n",
+    "                for c in site_zoom_bar_df.columns\n",
     "                if c != category_col or show_category_label\n",
     "            ],\n",
     "        )\n",
@@ -287,21 +297,26 @@
     "        .add_parameter(site_brush)\n",
     "        .properties(width=site_zoom_bar_width, height=cell_size, title=\"site zoom bar\")\n",
     "    )\n",
-    "       \n",
+    "\n",
     "    # to make data in Chart smaller, access properties that are same across all sites\n",
     "    # or categories via a transform_lookup. Make data frames with columns to do that.\n",
     "    lookup_dfs = {}\n",
     "    for lookup_col in [\"site\", category_col]:\n",
     "        cols_to_lookup = [\n",
-    "            c for c in data_df.columns\n",
+    "            c\n",
+    "            for c in data_df.columns\n",
     "            if all(data_df.groupby(lookup_col)[c].nunique(dropna=False) == 1)\n",
     "            if c not in [\"site\", category_col]\n",
     "        ]\n",
     "        if cols_to_lookup:\n",
-    "            lookup_dfs[lookup_col] = data_df[[lookup_col, *cols_to_lookup]].drop_duplicates()\n",
-    "            assert len(lookup_dfs[lookup_col]) == data_df[lookup_col].nunique(), f\"{lookup_col=}\\n{lookup_dfs[lookup_col]=}\\n{len(lookup_dfs[lookup_col])=}\\n{data_df[lookup_col].nunique()=}\"\n",
+    "            lookup_dfs[lookup_col] = data_df[\n",
+    "                [lookup_col, *cols_to_lookup]\n",
+    "            ].drop_duplicates()\n",
+    "            assert (\n",
+    "                len(lookup_dfs[lookup_col]) == data_df[lookup_col].nunique()\n",
+    "            ), f\"{lookup_col=}\\n{lookup_dfs[lookup_col]=}\\n{len(lookup_dfs[lookup_col])=}\\n{data_df[lookup_col].nunique()=}\"\n",
     "            data_df = data_df.drop(columns=cols_to_lookup)\n",
-    "            \n",
+    "\n",
     "    # make the base chart that holds the data and common elements\n",
     "    base_chart = alt.Chart(data_df)\n",
     "    for lookup_col, lookup_df in lookup_dfs.items():\n",
@@ -313,18 +328,14 @@
     "                fields=[c for c in lookup_df.columns if c != lookup_col],\n",
     "            ),\n",
     "        )\n",
-    "        \n",
+    "\n",
     "    # Transforms on base chart. The \"_stat\" columns is floor transformed stat_col.\n",
-    "    base_chart = (\n",
-    "        base_chart\n",
-    "        .transform_calculate(\n",
-    "            _stat=alt.expr.max(alt.datum[stat_col], floor_at_zero[\"floor\"]),\n",
-    "            _stat_filter=\"0\",\n",
-    "        )\n",
-    "        .transform_joinaggregate(\n",
-    "            _stat_site_max=\"max(_stat)\",\n",
-    "            groupby=[\"site\"],\n",
-    "        )\n",
+    "    base_chart = base_chart.transform_calculate(\n",
+    "        _stat=alt.expr.max(alt.datum[stat_col], floor_at_zero[\"floor\"]),\n",
+    "        _stat_filter=\"0\",\n",
+    "    ).transform_joinaggregate(\n",
+    "        _stat_site_max=\"max(_stat)\",\n",
+    "        groupby=[\"site\"],\n",
     "    )\n",
     "    # Filter data using slider stat\n",
     "    for slider_stat, slider in sliders.items():\n",
@@ -334,8 +345,9 @@
     "        )\n",
     "    # Remove any sites that are only wildtype and filter with site zoom brush\n",
     "    base_chart = (\n",
-    "        base_chart\n",
-    "        .transform_calculate(_stat_not_wildtype=alt.datum.wildtype != alt.datum.mutant)\n",
+    "        base_chart.transform_calculate(\n",
+    "            _stat_not_wildtype=alt.datum.wildtype != alt.datum.mutant\n",
+    "        )\n",
     "        .transform_joinaggregate(\n",
     "            _stat_site_has_non_wildtype=\"max(_stat_not_wildtype)\",\n",
     "            groupby=[\"site\"],\n",
@@ -343,19 +355,20 @@
     "        .transform_filter(alt.datum[\"_stat_site_has_non_wildtype\"])\n",
     "        .transform_filter(site_brush)\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    # make the site chart\n",
     "    site_statistics = [\"sum\", \"mean\", \"max\", \"min\"]\n",
     "    site_stat = alt.selection_point(\n",
-    "        bind=alt.binding_radio(options=site_statistics, name=f\"site {stat_col} statistic\"),\n",
+    "        bind=alt.binding_radio(\n",
+    "            options=site_statistics, name=f\"site {stat_col} statistic\"\n",
+    "        ),\n",
     "        fields=[\"stat\"],\n",
     "        value=[{\"stat\": init_site_statistic}],\n",
     "        name=\"site_stat\",\n",
     "    )\n",
     "    site_prop_cols = lookup_dfs[\"site\"].columns if \"site\" in lookup_dfs else [\"site\"]\n",
     "    lineplot_base = (\n",
-    "        base_chart\n",
-    "        .transform_filter(alt.datum.wildtype != alt.datum.mutant)\n",
+    "        base_chart.transform_filter(alt.datum.wildtype != alt.datum.mutant)\n",
     "        .transform_aggregate(\n",
     "            **{stat: f\"{stat}(_stat)\" for stat in site_statistics},\n",
     "            groupby=[*site_prop_cols, category_col],\n",
@@ -368,7 +381,8 @@
     "            color=alt.Color(\n",
     "                category_col,\n",
     "                scale=alt.Scale(\n",
-    "                    domain=categories, range=[category_colors[c] for c in categories],\n",
+    "                    domain=categories,\n",
+    "                    range=[category_colors[c] for c in categories],\n",
     "                ),\n",
     "                legend=alt.Legend(orient=\"left\") if show_category_label else None,\n",
     "            ),\n",
@@ -383,42 +397,37 @@
     "    site_lineplot = (\n",
     "        (\n",
     "            (\n",
-    "                lineplot_base\n",
-    "                .mark_line(size=1)\n",
+    "                lineplot_base.mark_line(size=1)\n",
     "                .transform_calculate(_stat_show_line=\"true\")\n",
     "                .transform_filter(line_selection)\n",
-    "            ) + lineplot_base.mark_circle(opacity=1)\n",
+    "            )\n",
+    "            + lineplot_base.mark_circle(opacity=1)\n",
     "        )\n",
     "        .add_parameter(site_stat, line_selection)\n",
     "        .properties(width=alt.Step(lineplot_width), height=lineplot_height)\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    # make base chart for heatmaps\n",
-    "    heatmap_base = (\n",
-    "        base_chart\n",
-    "        .encode(\n",
-    "            y=alt.Y(\n",
-    "                \"mutant\",\n",
-    "                sort=alphabet,\n",
-    "                scale=alt.Scale(domain=alphabet),\n",
-    "                title=None,\n",
-    "            ),\n",
-    "        )\n",
+    "    heatmap_base = base_chart.encode(\n",
+    "        y=alt.Y(\n",
+    "            \"mutant\",\n",
+    "            sort=alphabet,\n",
+    "            scale=alt.Scale(domain=alphabet),\n",
+    "            title=None,\n",
+    "        ),\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    # wildtype text marks for heatmap\n",
     "    heatmap_wildtype = (\n",
-    "        heatmap_base\n",
-    "        .encode(x=alt.X(\"site:O\", sort=sort_sites))\n",
+    "        heatmap_base.encode(x=alt.X(\"site:O\", sort=sort_sites))\n",
     "        .transform_filter(alt.datum.wildtype == alt.datum.mutant)\n",
     "        .mark_text(text=\"x\", color=\"black\")\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    # background fill for missing values in heatmap, imputing dummy stat\n",
     "    # to get all cells\n",
     "    heatmap_bg = (\n",
-    "        heatmap_base\n",
-    "        .encode(x=alt.X(\"site:O\", sort=sort_sites))\n",
+    "        heatmap_base.encode(x=alt.X(\"site:O\", sort=sort_sites))\n",
     "        .transform_impute(\n",
     "            impute=\"_stat_dummy\",\n",
     "            key=\"mutant\",\n",
@@ -428,15 +437,14 @@
     "        )\n",
     "        .mark_rect(color=\"gray\", opacity=0.25)\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    # Make heatmaps for each category and vertically concatenate. We do this in loop\n",
     "    # rather than faceting to enable compound chart w wildtype marks and category\n",
     "    # specific coloring.\n",
     "    heatmaps = alt.vconcat(\n",
     "        *[\n",
     "            heatmap_bg\n",
-    "            + heatmap_base\n",
-    "            .transform_filter(alt.datum[category_col] == category)\n",
+    "            + heatmap_base.transform_filter(alt.datum[category_col] == category)\n",
     "            .encode(\n",
     "                x=alt.X(\n",
     "                    \"site:O\",\n",
@@ -455,7 +463,7 @@
     "                        title=stat_col,\n",
     "                        titleOrient=\"left\",\n",
     "                        gradientLength=100,\n",
-    "                        gradientStrokeColor=\"black\",                            \n",
+    "                        gradientStrokeColor=\"black\",\n",
     "                        gradientStrokeWidth=0.5,\n",
     "                    ),\n",
     "                    scale=alt.Scale(\n",
@@ -466,11 +474,16 @@
     "                        type=\"linear\",\n",
     "                        **({\"domainMid\": 0} if heatmap_color_scheme_mid_0 else {}),\n",
     "                        **(\n",
-    "                            {\"scheme\": heatmap_color_scheme} if heatmap_color_scheme\n",
+    "                            {\"scheme\": heatmap_color_scheme}\n",
+    "                            if heatmap_color_scheme\n",
     "                            else {\n",
     "                                \"range\": (\n",
-    "                                    color_gradient_hex(heatmap_negative_color, \"white\", n=20)\n",
-    "                                    + color_gradient_hex(\"white\", category_colors[category], n=20)[1:]\n",
+    "                                    color_gradient_hex(\n",
+    "                                        heatmap_negative_color, \"white\", n=20\n",
+    "                                    )\n",
+    "                                    + color_gradient_hex(\n",
+    "                                        \"white\", category_colors[category], n=20\n",
+    "                                    )[1:]\n",
     "                                )\n",
     "                            }\n",
     "                        ),\n",
@@ -496,9 +509,11 @@
     "        spacing=10,\n",
     "    ).resolve_scale(\n",
     "        x=\"shared\",\n",
-    "        color=\"shared\" if heatmap_color_scheme or len(categories) == 1 else \"independent\",\n",
+    "        color=\"shared\"\n",
+    "        if heatmap_color_scheme or len(categories) == 1\n",
+    "        else \"independent\",\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    chart = (\n",
     "        alt.vconcat(site_zoom_bar, site_lineplot, heatmaps)\n",
     "        .add_parameter(floor_at_zero, site_brush, *sliders.values())\n",
@@ -506,14 +521,17 @@
     "        .configure_axis(labelOverlap=\"parity\", grid=False)\n",
     "        .resolve_scale(color=\"independent\")\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    if plot_title:\n",
     "        chart = chart.properties(\n",
     "            title=alt.TitleParams(\n",
-    "                plot_title, anchor=\"start\", align=\"left\", fontSize=16,\n",
+    "                plot_title,\n",
+    "                anchor=\"start\",\n",
+    "                align=\"left\",\n",
+    "                fontSize=16,\n",
     "            ),\n",
     "        )\n",
-    "    \n",
+    "\n",
     "    return chart"
    ]
   },
@@ -599,7 +617,10 @@
    ],
    "source": [
     "chart = lineplot_and_heatmap(\n",
-    "    data_df=init_df.assign(domain=lambda x: x[\"site\"].map(lambda r: r // 75), times_seen=lambda x: x[\"times_seen\"].map(lambda y: y if y < 15 else pd.NA)),\n",
+    "    data_df=init_df.assign(\n",
+    "        domain=lambda x: x[\"site\"].map(lambda r: r // 75),\n",
+    "        times_seen=lambda x: x[\"times_seen\"].map(lambda y: y if y < 15 else pd.NA),\n",
+    "    ),\n",
     "    stat_col=\"escape_median\",\n",
     "    category_col=\"epitope\",\n",
     "    site_zoom_bar_color_col=\"domain\",\n",
@@ -607,10 +628,10 @@
     "    addtl_slider_stats={\"n_models\": 3, \"times_seen\": 10},\n",
     "    init_site_statistic=\"mean\",\n",
     "    plot_title=\"example\",\n",
-    "#    category_colors={\"class 1\": \"red\", \"class 2\": \"green\", \"class 3\": \"blue\"},\n",
-    "#    heatmap_negative_color=\"yellow\",\n",
-    "#    heatmap_color_scheme=\"redblue\",\n",
-    "#    heatmap_color_scheme_mid_0=False,\n",
+    "    #    category_colors={\"class 1\": \"red\", \"class 2\": \"green\", \"class 3\": \"blue\"},\n",
+    "    #    heatmap_negative_color=\"yellow\",\n",
+    "    #    heatmap_color_scheme=\"redblue\",\n",
+    "    #    heatmap_color_scheme_mid_0=False,\n",
     "    heatmap_min_at_least=-3,\n",
     "    heatmap_max_at_least=8,\n",
     ")\n",
